Bug 821426: Call FinishReflowChild() instead of DidReflow() after flex container's "measuring" reflow for a flex item. r=dbaron